[gd_scene load_steps=5 format=2]

[ext_resource path="res://materiais/imagem/dica_1.jpeg" type="Texture" id=1]
[ext_resource path="res://script/pista_igreja.gd" type="Script" id=2]
[ext_resource path="res://fonts/COURGETTE-REGULAR.TTF" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 31
extra_spacing_top = 2
extra_spacing_bottom = 2
font_data = ExtResource( 3 )

[node name="pista_igreja" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 200, 351 )
scale = Vector2( 0.558333, 0.551562 )
texture = ExtResource( 1 )

[node name="pista" type="Label" parent="Sprite"]
margin_left = -217.0
margin_top = 250.0
margin_right = 234.0
margin_bottom = 542.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Dona Coló imaginava seus filhos e netos morrendo, tendo as suas trajetórias sendo abreviadas neste mundo."
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="voltar" type="TextureButton" parent="."]
margin_left = 224.0
margin_top = 23.0
margin_right = 387.0
margin_bottom = 67.0

[node name="cazumbar" type="TextureButton" parent="."]
margin_left = 46.0
margin_top = 24.0
margin_right = 209.0
margin_bottom = 68.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="voltar" to="." method="_on_voltar_pressed"]
[connection signal="pressed" from="cazumbar" to="." method="_on_cazumbar_pressed"]
